--- a/module1_task2/Makefile
+++ b/module1_task2/Makefile
@@ -1,7 +1,7 @@
 #	implement the Makefile to create rules
 build:	## create a rule to build the webpage and create the file /dist
 	@hugo
-clean:	## create a rule `clean` to clenup all directory /dist
+clean:	## create a rule clean to clenup all directory /dist
 	@rm -rf dist/*
 post:	## Create a new blog post whose filename and title come from the environment variables POST_TITLE and POST_NAME 
 	@hugo new posts/$(POST_NAME).md
