--- a/module1_task2/Makefile
+++ b/module1_task2/Makefile
@@ -12,6 +12,6 @@ post:	## Create a new blog post using enviroment variable
 
 help:	## command help
 	@echo "build : create a rule to build the webpage and create the file /dist"
-	@echo "clean: create a rule `clean` to clenup all directory /dist"
+	@echo "clean: create a rule clean to clenup all directory /dist"
 	@echo "post: Create a new blog post whose filename"
 	@echo "help: command to help about the usage the proyect"
