--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -57,8 +57,9 @@ jobs:
       # create a Release
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/1.0.0')
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             module3_task3/awesome-website.zip
             module3_task3/DEPLOY.md
+          body_path: module3_task3/DEPLOY.md
