--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -59,7 +59,7 @@ jobs:
       # create a Release
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/1.0.0')
         with:
           files: |
             module3_task3/awesome-website.zip
