--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -10,7 +10,7 @@ on:
     # branches: [master]
     branches: [master]
     tags:
-      - '1.0.0'
+      - 'v*.*.*'
   schedule:
     - cron: '0 0 * * *'
 
@@ -62,8 +62,9 @@ jobs:
       # create a Release
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/1.0.0')
+        if: startsWith(github.ref, 'refs/tags/')
         with:
+          name: 1.0.0
           files: |
             module3_task3/awesome-website.zip
             module3_task3/DEPLOY.md
