--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -64,6 +64,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
+          # tag_name: 1.0.0
           files: |
             module3_task3/awesome-website.zip
             module3_task3/DEPLOY.md
