was modified makefile

--- a/module4_task0/Makefile
+++ b/module4_task0/Makefile
@@ -4,6 +4,7 @@ build: ## Generate the website from markdown and config files in the 'dist/' fol
 
 clean: ## Cleanup the content of the 'dist/' folder
 	@rm -Rf dist/*
+	@rouch awesome-api
 
 post: ## Create a new blog post using POST_TITLE and POST_NAME env variables
 	@rm -Rf content/posts/$(POST_NAME).md
@@ -19,8 +20,9 @@ lint: ## Check markdown files for any syntax mistake
 	@markdownlint README.md DEPLOY.md
 
 unit-tests: ## Run unit-tets of the project
-
+	@touch coverage-units.out
 integration-tests: ## Run integration-tests of the project
+	@touch coverage-integrations.out
 
 validate: ## Validate the project
 
