--- a/.github/workflows/module4_task1.yml
+++ b/.github/workflows/module4_task1.yml
@@ -40,6 +40,13 @@ jobs:
       - name: Run markdownlint on markdown files
         run: make lint -C module4_task1/
 
+
+      # build docker file
+      - name: # build dokcer file
+        run: |
+            cd module4_task1
+            make build-docker
+
       # Go to the right folder and execute 'make build'
       - name: Build the application
         run: make build -C module4_task1/
@@ -87,7 +94,7 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         timeout-minutes: 1
-       # build docker file
+      # build docker file
       - name: # build dokcer file
         run: |
             cd module4_task1
