--- a/module4_task1/Makefile
+++ b/module4_task1/Makefile
@@ -12,7 +12,7 @@ post: ## Create a new blog post using POST_TITLE and POST_NAME env variables
 	@sed -i 's/draft:.*/draft: "false"/' content/posts/$(POST_NAME).md
 
 package: ## Produce a zip file containing the 'dist/' folder
-	@zip -r awesome-website.zip dist/
+	@zip -r awesome-website.zip . -i dist/
 
 build-docker: ## Define a docekr image
 	@docker build -t awesome:build -f ./build/Dockerfile .
