--- a/.github/workflows/module4_task1.yml
+++ b/.github/workflows/module4_task1.yml
@@ -43,7 +43,7 @@ jobs:
 
       # build docker file
       - name: # build dokcer file
-        run: | # execute build docker
+        run: |
             cd module4_task1
             make build-docker
             docker run -d -p8080 awesome:build
