--- a/.github/workflows/module4_task1.yml
+++ b/.github/workflows/module4_task1.yml
@@ -42,7 +42,7 @@ jobs:
 
 
       # build docker file
-      - name: # build dokcer file
+      - name: build dokcer file
         run: |
             cd module4_task1
             make build-docker
