--- a/module4_task1/Makefile
+++ b/module4_task1/Makefile
@@ -13,7 +13,8 @@ post: ## Create a new blog post using POST_TITLE and POST_NAME env variables
 	@sed -i 's/draft:.*/draft: "false"/' content/posts/$(POST_NAME).md
 
 package: ## Produce a zip file containing the 'dist/' folder
-	@hugo
+	@make build
+	@mkdir -p dist
 	@zip -r awesome-website.zip  dist/
 
 build-docker: ## Define a docekr image
