--- a/.github/workflows/module4_task1.yml
+++ b/.github/workflows/module4_task1.yml
@@ -56,8 +56,8 @@ jobs:
         run: make build -C module4_task1/
 
       # Produce a zip file containing the dist folder
-      - name: Archive the dist folder inside a zip file
-        run: make package -C module4_task1/
+      # - name: Archive the dist folder inside a zip file
+      #   run: make package -C module4_task1/
 
       # Additional steps form past module
       - name: Run additional make rules
