--- a/.github/workflows/module4_task1.yml
+++ b/.github/workflows/module4_task1.yml
@@ -42,45 +42,45 @@ jobs:
 
 
       # build docker file
-      # - name: build dokcer file
-      #  run: |
-      #      cd module4_task1
-      #      make build-docker
-      #      docker run --rm -v $(pwd):/app awesome:build make clean
-      #      docker run --rm -v $(pwd):/app awesome:build make lint
-      #      docker run --rm -v $(pwd):/app awesome:build make build
+      - name: build dokcer file
+        run: |
+          cd module4_task1
+          make build-docker
+          docker run --rm -v $(pwd):/app awesome:build make clean
+          docker run --rm -v $(pwd):/app awesome:build make lint
+          docker run --rm -v $(pwd):/app awesome:build make build
 
 
       # Go to the right folder and execute 'make build'
-      - name: Build the application
-        run: make build -C module4_task1/
+      #  - name: Build the application
+      # run: make build -C module4_task1/
 
       # Produce a zip file containing the dist folder
       # - name: Archive the dist folder inside a zip file
       #   run: make package -C module4_task1/
 
       # Additional steps form past module
-      - name: Run additional make rules
-        run: |
-          make unit-tests -C module4_task1/
-          make integration-tests -C module4_task1/
-          make validate -C module4_task1/
+      #- name: Run additional make rules
+      # run: |
+      #   make unit-tests -C module4_task1/
+      #   make integration-tests -C module4_task1/
+      #   make validate -C module4_task1/
       # Archive the zip file as artifact
-      - name: Archive code coverage results
-        uses: actions/upload-artifact@v3
-        with:
-          name: Archive awesome-website.zip as artifact
-          path: |
-            module4_task1/awesome-website.zip
-            module4_task1/DEPLOY.md
+      #- name: Archive code coverage results
+      # uses: actions/upload-artifact@v3
+      # with:
+      #   name: Archive awesome-website.zip as artifact
+      #   path: |
+      #      module4_task1/awesome-website.zip
+      #      module4_task1/DEPLOY.md
       # create a Release
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            module4_task1/awesome-website.zip
-            module4_task1/DEPLOY.md
+      #- name: Release
+      #  uses: softprops/action-gh-release@v1
+      #  if: startsWith(github.ref, 'refs/tags/')
+      #  with:
+      #    files: |
+      #      module4_task1/awesome-website.zip
+      #      module4_task1/DEPLOY.md
       #    body_path: module3_task3/DEPLOY.md
 
       # Deploy a new site on Netlify
