--- a/.github/workflows/module4_task1.yml
+++ b/.github/workflows/module4_task1.yml
@@ -46,10 +46,9 @@ jobs:
         run: |
           cd module4_task1
           make build-docker
-          docker run --rm -v $(pwd):/app awesome:build make clean
-          docker run --rm -v $(pwd):/app awesome:build make lint
-          docker run --rm -v $(pwd):/app awesome:build make build
-
+        run: |
+          docker run -i "awesome:build" make -C module4_task1 clean build \
+          unit-tests integration-tests
 
       # Go to the right folder and execute 'make build'
       #  - name: Build the application
