--- a/.github/workflows/module4_task1.yml
+++ b/.github/workflows/module4_task1.yml
@@ -46,6 +46,7 @@ jobs:
         run: |
           cd module4_task1
           make build-docker
+      - name: test amke
         run: |
           docker run -i "awesome:build" make -C module4_task1 clean build \
           unit-tests integration-tests
