--- a/module6_task0/jenkins/Dockerfile
+++ b/module6_task0/jenkins/Dockerfile
@@ -1,7 +1,10 @@
 FROM jenkins/jenkins:lts-jdk11
-USER root
+# USER root
 COPY --chown=jenkins:jenkins plugins.txt /usr/share/jenkins/ref/plugins.txt
 RUN jenkins-plugin-cli -f /usr/share/jenkins/ref/plugins.txt
+# COPY and install the plugins
+# COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
+# RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
 # RUN apt-get install openjdk-11-jdk-headless
 # RUN apt-get update && apt-get install -y lsb-release
 # RUN curl -fsSLo /usr/share/keyrings/docker-archive-keyring.asc \
