--- a/module6_task0/jenkins/cst.yml
+++ b/module6_task0/jenkins/cst.yml
@@ -1,17 +1,8 @@
 schemaVersion: 2.0.0
-metadataTest:
-  env:
-    - key: YOUR_ENV_VAR
-      value: SOME VALUE
-  labels:
-    - key: 'org.node.version'
-      value: '14'
-    - key: 'org.your.key'
-      value: 'your_value'
-fileExistenceTests:
-  - name: 'Root'
-    path: '/'
-    shouldExist: true
+# fileExistenceTests:
+#  - name: 'Root'
+#    path: '/'
+#    shouldExist: true
 commandTests:
   - name: "Check that java is working"
     command: "which"
